--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,135 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@font-face {
+  font-family: Poppins;
+  src: url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;500;576;700&display=swap');
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  box-sizing: border-box;
+  font-family: Poppins, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+#root {
+  height: 100%;
+}
+
+h1 {
+  font-size: 32px;
+  font-weight: 300;
+}
+
+.font-section {
+  font-size: 36px;
+  font-weight: 400;
+  text-align: center;
+}
+
+ul {
+  display: flex;
+  text-decoration: none;
+  list-style: none;
+}
+
+ul>a>li {
+  padding: 5px 15px;
+  margin: 5px;
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+ul>a>li:hover {
+  background-color: rgba(179, 130, 176, 0.5);
+  border-radius: 10px;
+  color: #4b4a4a;
+}
+
+.button {
+  border: none;
+  background-color: rgba(179, 130, 176, 0.8);
+  color: #ffffff;
+  cursor: pointer;
+  font-size: 16px;
+  margin: 5px;
+  outline: none;
+  padding: 10px 15px;
+  transition: 0.5s;
+}
+
+.button:hover {
+  background-color: rgba(179, 130, 176, 0.5);
+}
+
+input,
+textarea {
+  background-color: rgba(223, 221, 222, 0.4);
+  border-radius: 5px;
+  border:1px solid rgba(223, 221, 222, 0.8);
+  box-shadow: 1px 2px 5px 1px #cfcece;
+  outline: none;
+  padding: 10px;
+  width: 100%;
+}
+
+input:focus, textarea:focus {
+  background-color: rgba(223, 221, 222, 0.1);
+  border:1px solid rgba(179, 130, 176, 0.8);
+  box-shadow: 1px 2px 5px 1px rgba(179, 130, 176, 0.8);
+}
+
+textarea {
+  min-height: 100px;
+}
+
+a {
+  text-decoration: none;
+  color: #000;
+  cursor: pointer;
+}
+
+a:hover {
+  color: #4b4a4a;
+}
+
+p {
+  font-size: 14px;
+  line-height: 28px;
+}
+
+.flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.flex-between {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.flex-evenly {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.line {
+  border-bottom: 1px solid #dadada;
+}
+
+@media screen and  (max-width:768px) {
+  h1 {
+    font-size: 24px;
+  }
+
+  .button {
+    margin: 5px;
+    padding: 5px 10px;
+  }
 }
