--- a/src/index.css
+++ b/src/index.css
@@ -123,6 +123,10 @@ p {
   border-bottom: 1px solid #dadada;
 }
 
+.bg-transparent {
+  mix-blend-mode: multiply;
+}
+
 @media screen and  (max-width:768px) {
   h1 {
     font-size: 24px;
