--- a/src/parts/Box/Box.module.css
+++ b/src/parts/Box/Box.module.css
@@ -1,114 +1,115 @@
 .box {
-    width: 200px;
-    height: 200px;
-    perspective: 400px;
-    margin: 100px auto 150px;
+  width: 200px;
+  height: 200px;
+  perspective: 400px;
+  margin: 100px auto 150px;
 }
 
 .cube {
-    position: relative;
-    width: 200px;
-    height: 200px;
-    transform-style: preserve-3d;
-    animation: turn 20s linear infinite;
+  position: relative;
+  width: 200px;
+  height: 200px;
+  transform-style: preserve-3d;
+  animation: turn 20s linear infinite;
 }
 
 .img {
-    height: 120px;
-    width: 120px;
-    object-fit: cover;
+  height: 120px;
+  width: 120px;
+  object-fit: cover;
+  mix-blend-mode: color-burn;
 }
 
 .face {
-    width: 200px;
-    height: 200px;
-    border: 1px solid black;
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 2rem;
-    background-color: rgba(204, 148, 200, 0.5);
+  width: 200px;
+  height: 200px;
+  border: 1px solid black;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2rem;
+  background-color: rgba(204, 148, 200, 0.5);
 }
 
 .top {
-    transform: translateY(-100px) rotateX(90deg);
+  transform: translateY(-100px) rotateX(90deg);
 }
 
 .bottom {
-    transform: translateY(100px) rotateX(-90deg);
+  transform: translateY(100px) rotateX(-90deg);
 }
 
 .front {
-    transform: translateZ(100px);
+  transform: translateZ(100px);
 }
 
 .back {
-    transform: translateZ(-100px) rotateY(180deg);
+  transform: translateZ(-100px) rotateY(180deg);
 }
 
 .left {
-    transform: translateX(-100px) rotateY(-90deg);
+  transform: translateX(-100px) rotateY(-90deg);
 }
 
 .right {
-    transform: translateX(100px) rotateY(90deg);
+  transform: translateX(100px) rotateY(90deg);
 }
 
 @keyframes turn {
-    from {
-        transform: rotate3d(0, 0, 0, 0);
-    }
+  from {
+    transform: rotate3d(0, 0, 0, 0);
+  }
 
-    to {
-        transform: rotate3d(0, 1, 0, 360deg);
-    }
+  to {
+    transform: rotate3d(0, 1, 0, 360deg);
+  }
 }
 
-@media screen and  (max-width: 768px) {
-    .box {
-        margin: 100px auto 120px;
-        width: 150px;
-        height: 150px;
-        perspective: 300px;
-    }
+@media screen and (max-width: 768px) {
+  .box {
+    margin: 100px auto 120px;
+    width: 150px;
+    height: 150px;
+    perspective: 300px;
+  }
 
-    .cube {
-        width: 150px;
-        height: 150px;
-    }
+  .cube {
+    width: 150px;
+    height: 150px;
+  }
 
-    .face {
-        width: 150px;
-        height: 150px;
-    }
+  .face {
+    width: 150px;
+    height: 150px;
+  }
 
-    .top {
-        transform: translateY(-75px) rotateX(90deg);
-    }
-    
-    .bottom {
-        transform: translateY(75px) rotateX(-90deg);
-    }
-    
-    .front {
-        transform: translateZ(75px);
-    }
-    
-    .back {
-        transform: translateZ(-75px) rotateY(180deg);
-    }
-    
-    .left {
-        transform: translateX(-75px) rotateY(-90deg);
-    }
-    
-    .right {
-        transform: translateX(75px) rotateY(90deg);
-    }
+  .top {
+    transform: translateY(-75px) rotateX(90deg);
+  }
 
-    .img {
-        height: 70px;
-        width: 70px;
-    }
+  .bottom {
+    transform: translateY(75px) rotateX(-90deg);
+  }
+
+  .front {
+    transform: translateZ(75px);
+  }
+
+  .back {
+    transform: translateZ(-75px) rotateY(180deg);
+  }
+
+  .left {
+    transform: translateX(-75px) rotateY(-90deg);
+  }
+
+  .right {
+    transform: translateX(75px) rotateY(90deg);
+  }
+
+  .img {
+    height: 70px;
+    width: 70px;
+  }
 }
